# AgentX

./: .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml  run_test.py  scenario.toml  start_all.sh  start_participant.sh  stop_all.sh
.github/workflows/: purple-agent-workflow.yml
src/arena/: agent.py  executor.py  server.py
src/evaluator/: agent.py  executor.py  instructions.txt  messenger.py  server.py
src/evaluator/cache/: cache.db
src/solver/: agent.py  executor.py  interpreter.py  llm.py  server.py  strategies.py  tree.py
tests/: conftest.py  test_agent.py
